# webmotor

./: .gitattributes  .gitignore  CLOUD_SETUP.md  CMakeLists.txt  DEPLOYMENT.md  GitVersion.yml  README.md  generate_version.py  openapi.yml  platformio.ini  requirements.md  staticwebapp.config.json
.github/instructions/: github_instrcutions.instructions.md
.github/workflows/: azure-static-web-apps.yml
api/: .funcignore  README.md  function_app.py  local.settings.json.example  requirements.txt  version.json
cloud-frontend/: README.md  app.js  index.html  styles.css
components/tmc2209/: CMakeLists.txt  tmc2209.c
components/tmc2209/include/: tmc2209.h
components/web_server/: CMakeLists.txt  web_server.c
components/web_server/html/: index.html  script.js  style.css
components/web_server/include/: web_server.h
components/wifi_manager/: CMakeLists.txt  wifi_manager.c
data/: app.js  index.html  styles.css
include/: abstract_motor_controller.h  cloud_client.h  config.h  drive_controller.h  motor_controller.h  motor_controller_tmc2209.h  motor_controller_uln2003.h  platform_controller.h  state.h  version.h  web_server.h  wifi_manager.h
main/: main.c
simulator/: README.md  cloud_controller_simulator.py  requirements.txt  run_simulator.py  start_simulator.bat  test_simulator.py  webmotor_simulator.py
src/: cloud_client.cpp  drive_controller.cpp  main.cpp  motor_controller.cpp  motor_controller_tmc2209.cpp  motor_controller_uln2003.cpp  platform_controller.cpp  web_server.cpp  wifi_manager.cpp
test/: test_motor_controller.cpp
(+1 files in other folders)
